--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
+    "react-loading-skeleton": "^3.2.0",
     "sass": "^1.56.1",
     "typescript": "4.8.4",
     "yup": "^0.32.11"
