--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "moment": "^2.29.4",
     "next": "13.0.2",
+    "postcss": "^8.4.23",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^8.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
     "react-loading-skeleton": "^3.2.0",
     "sass": "^1.56.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.8.4",
     "yup": "^0.32.11"
   }
